--- a/student_files/05/roles/common/vars/main.yml
+++ b/student_files/05/roles/common/vars/main.yml
@@ -3,3 +3,12 @@ common__software:
   - iptables
   - iptables-services
   - httpd
+  - git
+  - epel-release
+  - gcc
+  - python3-pip
+  - python3-devel
+  - openssl-devel
+  - python3-libselinux
+  - docker
+  # - molecule
